# zk-private-lending

./: .env.example  .gitignore  Dockerfile.render  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  Cargo.toml  Dockerfile  README.md  openapi.yaml
api/migrations/: 001_initial.sql
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/db/: mod.rs  models.rs  repository.rs
api/src/routes/: commitment.rs  health.rs  mod.rs  position.rs  price.rs  proof.rs  ws.rs
api/src/services/: blockchain.rs  mod.rs  price_oracle.rs  websocket.rs  zk_prover.rs
api/src/types/: mod.rs
backend/: package-lock.json  package.json  server.js
circuits/arkworks/: Cargo.toml  README.md
circuits/arkworks/src/: collateral.rs  lib.rs  liquidation.rs  ltv.rs
circuits/circom/: README.md  collateral.circom  input.json  liquidation.circom  liquidation_input.json  ltv.circom  ltv_input.json  package.json
circuits/halo2/: Cargo.toml  README.md
circuits/halo2/benches/: circuit_benchmarks.rs
circuits/halo2/scripts/: build-wasm.sh
circuits/halo2/src/: collateral.rs  error.rs  lib.rs  liquidation.rs  ltv.rs  tests.rs  wasm.rs
circuits/halo2/src/gadgets/: comparison.rs  mod.rs  poseidon.rs  range_check.rs
contracts/: .gitignore  Dockerfile.deployer  README.md  deployments.json  foundry.toml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/artifacts/@openzeppelin/contracts/token/ERC20/ERC20.sol/: ERC20.dbg.json
contracts/artifacts/@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol/: SafeERC20.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
contracts/artifacts/src/CommitmentRegistry.sol/: CommitmentRegistry.json
contracts/artifacts/src/MockUSDC.sol/: MockUSDC.json
contracts/artifacts/src/ZKLendingPool.sol/: ZKLendingPool.dbg.json  ZKLendingPool.json
contracts/artifacts/src/ZKVerifier.sol/: ZKVerifier.json
contracts/artifacts/src/interfaces/ICommitmentRegistry.sol/: ICommitmentRegistry.json
contracts/artifacts/src/interfaces/IZKVerifier.sol/: IZKVerifier.dbg.json  IZKVerifier.json
contracts/cache_hardhat/: solidity-files-cache.json
contracts/script/: Deploy.s.sol  DeployTestnet.s.sol
contracts/scripts/: deploy.ts
contracts/src/: CommitmentRegistry.sol  MockUSDC.sol  MockZKVerifier.sol  ZKLendingPool.sol  ZKVerifier.sol
contracts/src/interfaces/: ICommitmentRegistry.sol  IZKVerifier.sol
contracts/test/: ZKLendingPool.invariant.t.sol  ZKLendingPool.t.sol  ZKLendingPool.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/factories/src/: CommitmentRegistry__factory.ts  MockUSDC__factory.ts  ZKLendingPool__factory.ts  ZKVerifier__factory.ts  index.ts
contracts/typechain-types/factories/src/interfaces/: ICommitmentRegistry__factory.ts  IZKVerifier__factory.ts  index.ts
contracts/typechain-types/src/: CommitmentRegistry.ts  MockUSDC.ts  ZKLendingPool.ts  ZKVerifier.ts  index.ts
contracts/typechain-types/src/interfaces/: ICommitmentRegistry.ts  IZKVerifier.ts  index.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GAS_BENCHMARKS.md  INTERVIEW_PREP.md  SECURITY_AUDIT.md  ZK_COMPARISON.md
docs/explanations/: 01_RANGE_CHECK.md  02_COMPARISON.md  03_COLLATERAL_PROOF.md  04_LTV_PROOF.md  05_LIQUIDATION_PROOF.md  README.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  vercel.json
frontend/e2e/: example.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BorrowForm.tsx  DepositForm.tsx  LiquidateForm.tsx  PositionCard.tsx  RepayForm.tsx  WalletConnect.tsx  WithdrawForm.tsx
frontend/src/hooks/: useWallet.ts  useWebSocket.ts  useZKProof.ts
frontend/src/services/: api.ts  contracts.ts
