[package]
name = "zk-lending-arkworks"
version = "0.1.0"
edition = "2021"
authors = ["Jinhyeok Kim"]
description = "arkworks R1CS implementation for ZK comparison"
license = "MIT"

[dependencies]
# arkworks ecosystem
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"

# Random
rand = "0.8"

[dev-dependencies]
ark-bls12-381 = "0.4.0"
